Instructor Scheduling: Scheduling Subparts / Classes
- Edit Scheduling Subpart: added need instructor assignment toggle, teaching load, instructor and course preferences
- Scheduling Subpart Detail: display need instructor assignment, need instructor assignment
- Edit Class: added instructor preferences
- Class Detail: added instructor and course preferences